--- a/harjoitus12.io/index4.html
+++ b/harjoitus12.io/index4.html
@@ -4,12 +4,16 @@
 		<title>Neljäs sivu</title>
 		<meta charset="utf-8"/>
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<link href=' http://fonts.googleapis.com/css?family=Droid+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles4.css">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<a class="navbar-brand" href="index.html"><img src="https://img.icons8.com/bubbles/50/000000/deciduous-tree.png"/></a>
+			<span class="navbar-text">
+			 你可以学习日语!
+			</span>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -27,7 +31,58 @@
 					</ul>
 			</div>
 		</nav>
-
+		<!-- Teksti osuus -->
+		<div class="container">
+			<div class="d-flex justify-content-center">
+				<h1>I am elated, you seek to learn traditional Chinese aka Honk Kong Chinese or Taiwanese Chinese. I won't share any links like in the other language pages, this time I myself will step in.</h1>
+			</div>
+			<hr>
+			<div class="d-flex justify-content-center">
+				<h1>DO you have it what it takes to master A1 level traditional Chinese? Can you muster energy to study 2 and half a hours a day five times in a week on online environment with a stranger, who might be your best friend to come? <br><br>This is not even about languages anymore, I am willing to train any english speaker into my level and recruit you into my scanlation group where you will get translation and typesetting works. My group currently has 6 other members, of which half is trained by me the same way you stumbled upon here. Join our merryfull band of traditional chinese enthusiasts and get yourself an experience that you might have not another chance to claim. I will only accept one pupil at time you see. We will disscuss about the details of studying and group projects but for now you can fill the form below to send an application.</h1>
+			</div>
+		</div>
+		<br><br>
+		<div class="container">
+		<form action="#" method="get" class="lomake">
+			<fieldset>
+				<legend>Personal Information</legend>
+				<label for="etunimi">First Name:</label>
+				<input type="text" id="etunimi" placeholder="insert first name" required>
+				<br>
+				<label for="sukunimi">Second Name:</label>
+				<input type="text" id="sukunimi" placeholder="insert second name" required>
+				<br>
+				<label for="sähköposti">Email:</label>
+				<input type="text" id="sähköposti" placeholder="insert email" required>
+				<br>
+				<label for="kansalaisuus">Nationality:</label>
+				<input type="text" id="kansalaisuus" placeholder="insert nationality" required>
+				<br>
+				<label for="ikä">Age:</label>
+				<input type="number" id="ikä" style="text-align:center" min="0" max="99" size="4" maxlength="2">
+			</fieldset>
+			<fieldset>
+				<legend>Any thing you would like to tell us?</legend>	
+				<label for="owntextarea"></label>
+				<textarea id="owntextarea" name="owntextarea" rows="7" cols="45"></textarea><br>
+				<label for="lisätietoja">I am willing to undertake the training and commit to it</label>
+				<input type="checkbox" id="lisätietoja" name="lisätietoja" required><br>
+			</fieldset>
+			<br><br>
+			<input type="submit" value="submit application">
+		</form>
+		</div>
+		<!-- footer-->
+		<hr>
+		<div class="container col-sm-12 footer">
+			<div class="row">
+				<div class="col-sm-6">AZNkween@yahoo.com <br> Nghị Trần Phường 8, Vietnam<br>+227 33606780  </div>
+				<div class="col-sm-6"><a href="#"><img src="https://img.icons8.com/dusk/64/000000/facebook-new--v2.png" height="32px" width="32px"/></a>
+					<br><a href="#"><img src="https://img.icons8.com/doodle/48/000000/youtube--v1.png" height="32px" width="32px"/></a>
+					<br><a href="#"><img src="https://img.icons8.com/plasticine/100/000000/pinterest--v2.png" height="32px" width="32px"/></a>
+				</div>
+			</div>
+		</div>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>	
 	</body>
