--- a/Yhteystiedot.html
+++ b/Yhteystiedot.html
@@ -32,9 +32,9 @@
 			<div class="tyhjä"></div>
 			<div class="tietoni">
 				<ul>
-					<h3>Luong Tommy Tran</h3>
+					<h3>Tommy Treyn</h3>
 					<li>Sijainti: Tikkurilantie 13</li>
-					<li>01300 Vantaa</li>
+					<li>01700 Vantaa</li>
 					<li>Puhelin numero: +358 551328721</li>
 					<li>Email: eekum.22@mns.com</li>
 				</ul>
